# cogno

./: .gitignore  Cargo.toml  README.md
cargo-cogno/: Cargo.toml  README.md  dev-install.sh
cargo-cogno/src/: discover.rs  main.rs  module_ref.rs
cogno/: Cargo.toml  README.md
cogno/attr/: Cargo.toml  README.md
cogno/attr/src/: lib.rs  module_ref.rs
cogno/proc/: Cargo.toml
cogno/proc/src/: close_handle.rs
cogno/src/: assert.rs  lib.rs
cogno/src/proc/: mod.rs
core/: Cargo.toml
core/src/: debug.rs  lib.rs
example/: Cargo.toml  sample-modifier.toml  sample-modifier2.toml  taplo.toml
example/src/: main.rs  sting.rs
hack/: Cargo.toml
hack/src/: main.rs
harness/: Cargo.toml
harness/assert/: Cargo.toml
harness/assert/src/: lib.rs
harness/attr/: Cargo.toml
harness/attr/src/: lib.rs
harness/proc/src/: lib.rs
harness/src/: error.rs  lib.rs
harness/src/report/: mod.rs  model.rs  reporter.rs
harness/src/report/reporters/: console.rs  mod.rs  raw.rs
harness/src/spec/: mod.rs
