[package]
name = "cargo-cogno"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A Cargo plugin to run Cogno tests"
homepage = "https://github.com/dionysus-oss/cogno/"
repository = "https://github.com/dionysus-oss/cogno/"
readme = "README.md"

[dependencies]
core = { path = "../core", version = "0.1.0" }
cargo = { version = "0.68.0", features = ["vendored-openssl"] }
cargo-util = "0.2.2"
clap = { version = "4", features = [ "color", "derive", "cargo" ] }
anyhow = "1"
regex = "1"
itertools = "0.10.5"
