[package]
name = "cogno"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A test harness for writing RFC spec tests"
homepage = "https://github.com/dionysus-oss/cogno/"
repository = "https://github.com/dionysus-oss/cogno/"
readme = "README.md"

[dependencies]
cogno-attr = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.7.1"
thiserror = "1"
itertools = "0.10.5"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = { version = "2.0.0", optional = true }

[features]
console = ["dep:colored"]
