[package]
name = "cogno"
version = "0.1.0"
edition = "2021"

[dependencies]
attr = { path = "./attr" }
assert = { path = "./assert" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.7.1"
thiserror = "1"
itertools = "0.10.5"
colored = { version = "2.0.0", optional = true }

[features]
console = ["dep:colored"]
